samples/daytrader/nsx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: custom-ing-daytrader
  annotations:
    kubernetes.io/ingress.class: nsx
    # ingress.kubernetes.io/affinity: "cookie"
    # ingress.kubernetes.io/session-cookie-name: "route"
    # ingress.kubernetes.io/session-cookie-hash: "sha1"
    # ingress.kubernetes.io/rewrite-target: /sample-war-proj
spec:
  rules:
  - http:
      paths:
      - path: /daytrader.*
        backend:
          serviceName: daytrader-ibm-websphere
          servicePort: 9080
